# CQPopcorn

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: cqext.c  main.c
src/codec/uniconn/: unipkt.c
src/codec/uniconn/include/: unipkt.h
src/cqapi/: cqapi.c  cqapi_add_log.c  cqapi_can_send_image.c  cqapi_can_send_record.c  cqapi_delete_msg.c  cqapi_get_app_directory.c  cqapi_get_cookies_v2.c  cqapi_get_csrf_token.c  cqapi_get_friend_list.c  cqapi_get_group_info.c  cqapi_get_group_list.c  cqapi_get_group_member_info_v2.c  cqapi_get_group_member_list.c  cqapi_get_image.c  cqapi_get_login_nick.c  cqapi_get_loginqq.c  cqapi_get_record.c  cqapi_get_record_v2.c  cqapi_get_stranger_info.c  cqapi_send_discuss_msg.c  cqapi_send_group_msg.c  cqapi_send_like_v2.c  cqapi_send_private_msg.c  cqapi_set_discuss_leave.c  cqapi_set_fatal.c  cqapi_set_friend_add_request.c  cqapi_set_group_add_request_v2.c  cqapi_set_group_admin.c  cqapi_set_group_anonymous.c  cqapi_set_group_anonymous_ban.c  cqapi_set_group_ban.c  cqapi_set_group_card.c  cqapi_set_group_kick.c  cqapi_set_group_leave.c  cqapi_set_group_special_title.c  cqapi_set_group_whole_ban.c  cqext.c  cqimpl.c
src/cqapi/include/: cqapi.h  cqapi_onebot.h  cqapi_uniconn.h  cqapi_virtual.h  cqext.h  cqimpl.h
src/include/: cqapi.h  cqext.h
test/: CmakeLists.txt  test.c
